--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="testimonials1 cid-rpW5DIs3nL mbr-parallax-background" id="testimonials1-3">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="testimonials1 cid-rpW5DIs3nL" id="testimonials1-3">
 
     
 
@@ -750,8 +750,8 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-tabs/mbr-tabs.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
